update background colors for login page

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,7 +1,6 @@
 
 $dark-red: #AA4439;
 $light-red: #B85348;
+$soundcloud: rgba(255, 58, 0, 1);
+$soundcloud-opaque: rgba(255, 58, 0, 0.7);
 
-body {
-	background-color: $light-red;
-}
