--- a/src/components/Stream/style.scss
+++ b/src/components/Stream/style.scss
@@ -1,17 +1,24 @@
 $dark-red: #AA4439;
 $light-red: #B85348;
-$soundcloud: rgba(255, 58, 0, 1);
-$soundcloud-opaque: rgba(255, 58, 0, 0.7);
+$soundcloud: rgba(255, 58, 0, 0.9);
+$soundcloud-opaque: rgba(255, 58, 0, 0.6);
+$athini: 'Athiti', sans-serif;
+$spacemono: 'Space Mono', monospace;
+$bungee: 'Bungee Hairline', sans-serif;
 
 .login {
   position: absolute;
   width: 100%;
   top: 0px;
   height: 100%;
+  font-family: $bungee;
+
   background: linear-gradient($soundcloud-opaque, $soundcloud);
   &.active {
     .btn {
       width: 100%;
+      border-radius: 0px;
+      color: $soundcloud;
     }
   }
 
@@ -24,12 +31,14 @@ $soundcloud-opaque: rgba(255, 58, 0, 0.7);
       color: #FFF !important;
       height: 100% !important;
       margin: 0px;
+      color: $soundcloud;
     }
   }
 
   h1 {
     text-transform: uppercase;
     font-size: 45px;
+    letter-spacing: 3px;
     color: #FFF;
     text-align: center;
     padding: 350px 0px;
@@ -40,7 +49,7 @@ $soundcloud-opaque: rgba(255, 58, 0, 0.7);
   .btn {
     height: 50px;
     width: 250px;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
     text-transform: uppercase;
     background-color: #FFF;
@@ -48,7 +57,8 @@ $soundcloud-opaque: rgba(255, 58, 0, 0.7);
     position: absolute;
     left: 50%;
     top: 50%;
-    color: $light-red;
+    letter-spacing: 3px;
+    color: $soundcloud;
     transform: translate(-50%,-50%);
     transition: all 0.4s cubic-bezier(.87,.21,.97,.55);
     z-index: 1;
@@ -57,6 +67,7 @@ $soundcloud-opaque: rgba(255, 58, 0, 0.7);
       cursor: pointer;
       height: 50px;
       width: 100%;
+       color: $soundcloud;
     }
   }
 }
