--- a/src/components/Stream/style.scss
+++ b/src/components/Stream/style.scss
@@ -78,6 +78,7 @@ $bungee: 'Bungee Hairline', sans-serif;
 
     &:hover{
        cursor: pointer;
+       width: 100%;
     }
 
 
@@ -102,6 +103,10 @@ $bungee: 'Bungee Hairline', sans-serif;
       color: $soundcloud;
       transition: all 0.3s cubic-bezier(.87,.21,.97,.55);
       transform: translateX(-50%);
+      &:focus {
+        width: 100%;
+      }
+
       &[type='submit'] {
         display: none;
       }
