--- a/src/components/Result/style.scss
+++ b/src/components/Result/style.scss
@@ -5,6 +5,7 @@ $soundcloud-opaque: rgba(255, 58, 0, 0.7);
 $athini: 'Athiti', sans-serif;
 $spacemono: 'Space Mono', monospace;
 $bungee: 'Bungee Hairline', sans-serif;	
+$chathura: 'Chathura', sans-serif;
 
 .search-result {
 	max-width: 500px;
@@ -27,14 +28,28 @@ $bungee: 'Bungee Hairline', sans-serif;
 	img, .result-info {
 		display: inline-block;
 		vertical-align: top;
+		width: 30%
 	}
 
 	.result-info {
-		padding: 5px 15px;
+		padding: 0px 15px;
+		width: calc(70% - 30px);
 	}
 	p {
 		margin-top: 0px;
 		color: $soundcloud;
+		font-family: $chathura;
+		text-transform: uppercase;
+		font-size: 30px;
+		letter-spacing: 2px;
+		line-height: 20px;
+		&:first-child {
+			margin-bottom: 15px;
+		}
+		&:not(:first-child){
+			margin-bottom: 0px;
+			font-size: 20px;
+		}
 	}
 
 	&.mounted {
