--- a/src/components/Stream/style.scss
+++ b/src/components/Stream/style.scss
@@ -71,7 +71,7 @@ $bungee: 'Bungee Hairline', sans-serif;
     border: none;
     position: absolute;
     left: 50%;
-    top: calc(25% + 150px);
+    top: calc(25% + 160px);
     letter-spacing: 3px;
     color: $soundcloud;
     transform: translate(-50%,-50%);
@@ -128,8 +128,18 @@ $bungee: 'Bungee Hairline', sans-serif;
 }
 
 .stream {
-  display: flex;
   overflow: hidden;
+  .left-col {
+    transition: transform 0.3s ease-in;
+    transform: translateX(-100%);
+
+  }
+  &.loaded {
+    .left-col {
+      transform: translateX(0%);
+    }
+  }
+
 }
 
 .left-col {
@@ -143,81 +153,6 @@ $bungee: 'Bungee Hairline', sans-serif;
 
 .active-track {
   position: fixed;
-}
-
-.user {
-  position: fixed;
-  width: calc(400px - 50px);
-  padding: 25px 25px 35px;
-  background-color: #333;
-  z-index: 99;
-
-  h2 {
-    color: $soundcloud;
-    font-family: $bungee;
-    letter-spacing: 3px;
-    font-size: 35px;
-    margin: 0px 0px 10px;
-  }
-
-  span {
-    color: #DDD;
-    font-size: 18px;
-    font-family: $spacemono;
-  }
-}
-
-.tracks {
-  margin-top: 145px;
-  .track {
-    color: #000;
-    display: flex;
-    padding: 15px 20px 25px;
-    position: relative;
-    border-bottom: 1px solid #DDD;
-    &:last-child {
-      border-bottom: none;
-    }
-
-    .details {
-      flex-grow: 3;
-      .title {
-        color: $soundcloud;
-        font-size: 18px;
-        max-width: 200px;
-        display: block;
-        font-family: $spacemono;
-        text-transform: capitalize;
-        margin-bottom: 15px;
-      }
-      .length {
-        text-align: center;
-        font-size: 1x;
-        color: #333;
-        font-family: $athini;
-      }
-    }
-
-
-    button {
-      background: none;
-      border: none;
-      font-size: 50px;
-      text-align: right;
-      color: $soundcloud-opaque;
-      line-height: 20px;
-      &:hover {
-        cursor: pointer;
-      }
-      svg {
-        position: absolute;
-        top: 50%;
-        right: 25px;
-        transform: translateY(-50%);
-      }
-    }
-
-  }
 }
 
 
