--- a/src/style.scss
+++ b/src/style.scss
@@ -26,8 +26,15 @@ body > div {
   top: 0px;
   height: 100%;
   background: linear-gradient($soundcloud-opaque, $soundcloud);
+  opacity: 0;
+  transition: opacity 1s;
+  transition-delay: 0.5s;
   svg {
     width: 100% !important;
+  }
+
+  &.loaded {
+    opacity: 1;
   }
 }
 
